[metadata]
name = spritegen
version = 0.1.0
description = A tool for generating placeholder spritesheets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/demestav/spritegen
author = Demetris Stavrou
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    pillow

[options.entry_points]
console_scripts =
    spritegen = spritegen.main:cli

[flake8]
max-line-length = 88
